# crypto-streaming-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.yaml
consumer/: consumer_streaming.py  db.py
producer/: models.py  producer_streaming.py
